# palisade-demos

./: .envrc  CLAUDE.md  README.md  app.py  flake.nix  hello.py  index.html  knowledge.md  pyproject.toml  requirements.txt  run.sh  serve.py  tui.py  ui.js  wrapper
disk-space/: .envrc  1-wrapper.sh  README.md  aws-disk-demo.py  aws-disk-demo.sh  aws-key-instructions.md  flake.nix  fly-disk-demo.sh  fly.toml  long.sh  my-fly-demo.sh  pyproject.toml  requirements.txt
disk-space/fly-app/: Dockerfile  entrypoint.sh  fly.toml
llm-training-game/: .envrc  README.md  addition.json  combine_json.py  demo.txt  flake.nix  generate.py  index.html  intro.json  intro1.json  intro2.json  math-full.json  math.txt  multiply.json  multiply.txt  prediction_data.json  pyproject.toml  serve.py  specification-gaming.json  specification-gaming.txt  ui.js
