[project]
name = "palisade-demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ctransformers>=0.2.27",
    "openai>=1.64.0",
    "requests>=2.32.3",
    "textual>=2.1.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
